--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nginx (1.6.2-5.1) UNRELEASED; urgency=medium
+
+  * Non-maintainer upload.
+  * added nginx-rtmp (based on nginx-extras)
+
+ -- IOhannes m zmölnig (Debian/GNU) <umlaeute@debian.org>  Thu, 30 Apr 2015 11:43:47 +0200
+
 nginx (1.6.2-5) unstable; urgency=medium
 
   [ Christos Trochalakis ]
